--- a/index.html
+++ b/index.html
@@ -6,40 +6,55 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
         integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <script src="https://d3js.org/d3.v6.min.js"></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+    <style>
+        h4 {
+            align-items: center;
+        }
+    </style>
 </head>
 
 <body>
-    <label for="year">Sort By Year:</label>
-    <select name="year" id="year" onchange=update(eval(this.value))>
-        <option value="data_2011">2011</option>
-        <option value="data_2012">2012</option>
-        <option value="data_2013">2013</option>
-        <option value="data_2014">2014</option>
-        <option value="data_2015">2015</option>
-        <option value="data_2016">2016</option>
-        <option value="data_2017">2017</option>
-        <option value="data_2018">2018</option>
-        <option value="data_2019">2019</option>
-        <option value="data_2020">2020</option>
-    </select>
-    <br>
-    <label for="offence">Sort By Offence:</label>
-    <select name="offence" id="offence" onchange=update(eval(this.value))>
-        <option value="data_murder">Murder</option>
-        <option value="data_serioushurt">Serious Hurt</option>
-        <option value="data_rape">Rape</option>
-        <option value="data_outrageofmodesty">Outrage Of Modesty</option>
-        <option value="data_rioting">Rioting</option>
-        <option value="data_robbery">Robbery</option>
-        <option value="data_housebreaking">House Breaking</option>
-        <option value="data_theftofmotorvehicle">Theft Of Motor Vehicle</option>
-        <option value="data_snatchtheft">Snatch Theft</option>
-        <option value="data_cheatingrelatedoffences">Cheating Related Offences</option>
-    </select>
+    <div>
+        <h2 class="text-center">Major Offence Cases In Singapore</h2>
+    </div>
+    <div>
+        <h4 class="text-center">
+            <label for="year">Sort By Year:</label>
+            <select class="form-select form-select-lg mb-3" name="year" id="year" onchange=update(eval(this.value))>
+                <option value="data_2011">2011</option>
+                <option value="data_2012">2012</option>
+                <option value="data_2013">2013</option>
+                <option value="data_2014">2014</option>
+                <option value="data_2015">2015</option>
+                <option value="data_2016">2016</option>
+                <option value="data_2017">2017</option>
+                <option value="data_2018">2018</option>
+                <option value="data_2019">2019</option>
+                <option value="data_2020">2020</option>
+            </select>
+            <label for="offence">Sort By Offence:</label>
+            <select class="form-select form-select-lg mb-3" name="offence" id="offence" onchange=update(eval(this.value))>
+                <option value="data_murder">Murder</option>
+                <option value="data_serioushurt">Serious Hurt</option>
+                <option value="data_rape">Rape</option>
+                <option value="data_outrageofmodesty">Outrage Of Modesty</option>
+                <option value="data_rioting">Rioting</option>
+                <option value="data_robbery">Robbery</option>
+                <option value="data_housebreaking">House Breaking</option>
+                <option value="data_theftofmotorvehicle">Theft Of Motor Vehicle</option>
+                <option value="data_snatchtheft">Snatch Theft</option>
+                <option value="data_cheatingrelatedoffences">Cheating Related Offences</option>
+            </select>
+        </h4>
+    </div>
 
+    <br>
+    <br>
     <!-- Graph -->
     <div id="my_dataviz"></div>
 
+    <!-- Loading of data-->
     <script>
         // Data sort by year
         let data_2011 = []
@@ -68,31 +83,42 @@
         // Loading data
         d3.csv("/data/cases-recorded-for-selected-major-offences.csv", function (data) {
             dict = eval("data_" + data["year"])
-            dict[data["level_2"]] = data["value"]
+            row = { 'crime': data['level_2'], 'cases': data['value'] }
+            dict.push(row)
             dict2 = eval("data_" + data["level_2"].toLowerCase().replace(/ /g, ""))
-            dict2[data["year"]] = data["value"]
+            row2 = { 'year': data['year'], 'cases': data['value'] }
+            dict2.push(row2)
         })
+    </script>
 
-        // set the dimensions and margins of the graph
-        const width = 450,
-            height = 450,
-            margin = 40;
+    <!-- Create/Update Chart -->
+    <script>
+        // set the dimensions and margins of the bar chart
+        var margin = { top: 30, right: 30, bottom: 70, left: 60 },
+            width = 1200 - margin.left - margin.right,
+            height = 400 - margin.top - margin.bottom;
 
-        // The radius of the pieplot is half the width or half the height (smallest one). I subtract a bit of margin.
-        const radius = Math.min(width, height) / 2 - margin;
-
-        // append the svg object to the div called 'my_dataviz'
-        const svg = d3.select("#my_dataviz")
+        // append the svg object to the body of the page
+        var svg = d3.select("#my_dataviz")
             .append("svg")
-            .attr("width", width)
-            .attr("height", height)
+            .attr("viewBox", `0 0 1200 400`)
             .append("g")
-            .attr("transform", `translate(${width / 2}, ${height / 2})`)
+            .attr("transform", "translate(" + margin.left + "," + margin.top + ")");
 
-        // set the color scale
-        const color = d3.scaleOrdinal()
-            .domain(["Murder", "Serious Hurt", "Rape", "Outrage of Modesty", "Rioting", "Robbery", "Housebreaking", "Theft Of Motor Vehicle", "Snatch Theft", "Cheating Related Offences"])
-            .range(d3.schemeDark2);
+        // Initialize the X axis
+        var x = d3.scaleBand()
+            .domain([0, 20000])
+            .range([0, width])
+            .padding(0.2);
+        var xAxis = svg.append("g")
+            .attr("transform", "translate(0," + height + ")")
+
+        // Initialize the Y axis
+        var y = d3.scaleLinear()
+            .domain([0, 20000])
+            .range([height, 0]);
+        var yAxis = svg.append("g")
+            .attr("class", "myYaxis")
 
         // create a tooltip
         var Tooltip = d3
@@ -115,11 +141,19 @@
                 .style("opacity", 1)
                 .style("stroke-width", 3);
         };
+
         var mousemove = function (d, i) {
-            Tooltip.html(i.data[0] + " : " +  i.value)
-                .style("left", d3.mouse(this)[0] + 70 + "px")
-                .style("top", d3.mouse(this)[1] + "px");
+            if (Object.keys(i)[0] == 'year') {
+                Tooltip.html("Year: " + i.year + "<br> Number of Cases: " + i.cases)
+                    .style("left", d3.pointer(this)[0] + 70 + "px")
+                    .style("top", d3.pointer(this)[1] + "px");
+            } else {
+                Tooltip.html("Type of Crime: " + i.crime + "<br>Number of Cases: " + i.cases)
+                    .style("left", d3.pointer(this)[0] + 70 + "px")
+                    .style("top", d3.pointer(this)[1] + "px");
+            }
         };
+
         var mouseleave = function (d) {
             Tooltip.style("opacity", 0);
             d3.select(this).style("stroke", "none").style("opacity", 0.8);
@@ -127,43 +161,51 @@
 
         // A function that create / update the plot for a given variable:
         function update(data) {
-            // Compute the position of each group on the pie:
-            const pie = d3.pie()
-                .value(function (d) { return d[1]; })
-                .sort(function (a, b) { return d3.ascending(a.key, b.key); }) // This make sure that group order remains the same in the pie chart
-            const data_ready = pie(Object.entries(data))
+            // Update the X axis
+            x.domain(data.map(function (d) {
+                if (Object.keys(d)[0] == 'year') {
+                    return d.year
+                } else {
+                    return d.crime
+                }
+            }))
+            xAxis.call(d3.axisBottom(x))
+
+            // Update the Y axis
+            y.domain([0, d3.max(data, function (d) { return d.cases })]);
+            yAxis.transition().duration(1000).call(d3.axisLeft(y));
 
             // map to data
-            const u = svg.selectAll("path")
-                .data(data_ready)
+            const u = svg.selectAll("rect")
+                .data(data)
 
-            // Build the pie chart: Basically, each part of the pie is a path that we build using the arc function.
-            u
-                .enter()
-                .append("path")
-                .merge(u)
-                .transition()
-                .duration(1000)
-                .attrTween('d', function (d) {
-                    var i = d3.interpolate(local.get(this), d);
-                    local.set(this, i(0));
-                    return function (t) {
-                        return arc(i(t));
-                    };
-                })
-                .attr('d', d3.arc()
-                    .innerRadius(0)
-                    .outerRadius(radius)
-                )
-                .attr('fill', function (d) { return (color(d.data[0])) })
-                .attr("stroke", "white")
-                .style("stroke-width", "2px")
-                .style("opacity", 1)
+            if (isNaN(x.domain()[0])) {
+                u
+                    .enter()
+                    .append("rect")
+                    .merge(u)
+                    .attr("x", (d) => x(d.crime)) // X axis (Type of Crimes)
+                    .attr("y", (d) => y(d.cases)) // Y axis (No. of Cases of Respective Crime)
+                    .attr("width", x.bandwidth())
+                    .attr("height", (d) => height - y(d.cases))
+                    .attr("fill", "#FFBF00")
+                    
+            } else {
+                u
+                    .enter()
+                    .append("rect")
+                    .merge(u)
+                    .attr("x", (d) => x(d.year)) // X axis (Year)
+                    .attr("y", (d) => y(d.cases)) // Y axis (No. of Cases of Respective Crime)
+                    .attr("width", x.bandwidth())
+                    .attr("height", (d) => height - y(d.cases))
+                    .attr("fill", "#FFBF00")
+            }
 
             u
                 .on("mouseover", mouseover)
                 .on("mousemove", mousemove)
-                .on("mouseleave", mouseleave);
+                .on("mouseleave", mouseleave)
         }
     </script>
 </body>
